Correctiond 'affichage pour les liens du header (version mobile) + du grid pour la version 1024px

--- a/src/styles/style_accueil_logement.scss
+++ b/src/styles/style_accueil_logement.scss
@@ -22,6 +22,11 @@
         margin : 0px 50px;
         padding : 20px;
         margin-bottom: 50px;
+
+        &__grid {
+            grid-column-gap: 30px;
+            grid-row-gap: 20px;
+        }
     }
 }
 
