--- a/src/styles/style_header.scss
+++ b/src/styles/style_header.scss
@@ -46,6 +46,6 @@ header a {
     header a {
         font-size : $Header-size-mobile;
         font-weight: $Header-weight-mobile;
-        margin-left : 26px;
+        margin-left : 10px;
     }
 }
